golden/error/runtime_unknown_field_string.test
"turbo encabulator".is_prefabulated

# output:
 --> stdin:1:20
  |
1 | "turbo encabulator".is_prefabulated
  |                     ^~~~~~~~~~~~~~~
Error: Unknown field.
